update js to add button dynamically

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  </head>
 
 <header>
-<nav class ="header">
+<nav class ="header" id="header">
     <h1 class="navbar-text">Quiz</h1>
     <h1 class="time" style="text-align:center;">Timer</h1>
 </nav>
@@ -24,17 +24,19 @@
 </div>
 
 <container class="quiz-page" id="quiz-page">
-    <h2 id="quiz-title">Quiz Questions</h2>
-    <button type="button" class="answer" id="firstanswer">Answer 1</button>
-    <button type="button" class="answer" id="firstanswer">Answer 2</button>
-    <button type="button" class="answer" id="firstanswer">Answer 3</button>
-    <button type="button" class="answer" id="firstanswer">Answer 4</button>
+    <h2 id="quiz-title"></h2>
+
 </container>
 
+<div class="score-page" id="score-page">
+  <h3 id="score">Score</h3>
+</div>
 
-<script src="script.js"></script>
+
+  <script src="script.js"></script>
 </body>
 </html>
+
  <!-- <header>
     <nav class="d-flex align-items-center justify-content-center navbar navbar-dark bg-dark">
         <div class="container-fluid">
