--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 </div>
 
 <container class="quiz-page" id="quiz-page">
-    <h2 id="quiz-title"></h2>
-
+    <h2 id="quiz-title">""</h2>
+    <p id="tag"></p>
 </container>
 
 <div class="score-page" id="score-page">
