modify score board and save

--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
     <p id="tag"></p>
 </container>
 
-<div class="score-page" id="score-page">
+<container class="score-page" id="score-page">
   <h3 id="score">Score</h3>
-</div>
+  <input type="text" placeholder = "Initials" id="username" />
+  <button type="button" id="save"class="savebtn">Save Score</button>
+</container>
 
 
   <script src="script.js"></script>
