finished project and update readme

--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
   <h3 id="score">Score</h3>
   <input type="text" placeholder = "Initials" id="username" />
   <button type="button" id="save"class="savebtn">Save Score</button>
+  <p>Username: <span id="userinitials"></span></p>
+  <p>Score: <span id="userscore"></span></p>
 </container>
 
 
